A revision of crud operations using put, post and delete.
