# swagger-output.json
@@ -11,12 +11,191 @@
     "https"
   ],
   "paths": {
+    "/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/sarah": {
       "get": {
         "description": "",
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/cars": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "inv_make": {
+                  "example": "any"
+                },
+                "inv_model": {
+                  "example": "any"
+                },
+                "inv_year": {
+                  "example": "any"
+                },
+                "inv_description": {
+                  "example": "any"
+                },
+                "inv_image": {
+                  "example": "any"
+                },
+                "inv_thumbnail": {
+                  "example": "any"
+                },
+                "inv_price": {
+                  "example": "any"
+                },
+                "inv_miles": {
+                  "example": "any"
+                },
+                "inv_colour": {
+                  "example": "any"
+                },
+                "classification_id": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/cars/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "inv_make": {
+                  "example": "any"
+                },
+                "inv_model": {
+                  "example": "any"
+                },
+                "inv_year": {
+                  "example": "any"
+                },
+                "inv_description": {
+                  "example": "any"
+                },
+                "inv_image": {
+                  "example": "any"
+                },
+                "inv_thumbnail": {
+                  "example": "any"
+                },
+                "inv_price": {
+                  "example": "any"
+                },
+                "inv_miles": {
+                  "example": "any"
+                },
+                "inv_color": {
+                  "example": "any"
+                },
+                "classification_id": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
